Fix overflow issue

--- a/public/css/cms.css
+++ b/public/css/cms.css
@@ -204,7 +204,8 @@ body .container.body .right_col {
 
 .nav-md .container.body .right_col {
   padding: 10px 20px 0;
-  margin-left: 230px; }
+  margin-left: 230px;
+  overflow: hidden; }
 
 .nav_title {
   width: 230px;
